[tool.poetry]
name = "websocketclientpy"
version = "0.1.0"
description = ""
authors = ["Bizhan <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
websockets = "^9.0.2"
asyncio = "^3.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
